--- a/Tibox.Angular/Tibox.Web/app/public/login/login.html
+++ b/Tibox.Angular/Tibox.Web/app/public/login/login.html
@@ -1,13 +1,13 @@
 ﻿<div ng-controller="loginController as vm">
     <form id="loginModel" ng-submit="vm.login()">
         <div class="form-group">
-            <label for="email">Nombre de Usuario:</label>
-            <input type="email" class="form-control" id="email" ng-model="vm.user.userName" />
+            <label for="userName">Nombre de Usuario:</label>
+            <input type="email" class="form-control" id="userName" ng-model="vm.user.userName" />
         </div>
         <div class="form-group">
             <label for="password">Contraseña:</label>
             <input type="password" class="form-control" id="password" ng-model="vm.user.password" />
         </div>
-        <button type="submit">Submit</button>  
+        <button type="submit" class="btn btn-primary btn-sm">Submit</button>  
     </form>
 </div>
