--- a/Tibox.Angular/Tibox.Web/app/private/order/index.html
+++ b/Tibox.Angular/Tibox.Web/app/private/order/index.html
@@ -19,19 +19,21 @@
                     customer-id="{{::order.customerId}}"
                     total-amount="{{::order.totalAmount}}">
 
-            <button ng-click="vm.getOrder(order.id); vm.edit();"
+            <button id="act{{order.id}}"
+                    name="act{{order.id}}"
+                    ng-click="vm.getOrder(order.id); vm.edit();"
                     class="btn btn-success btn-sm"
                     data-toggle="modal"
-                    data-target="#modal-container"
-                    id="act{{order.id}}>
+                    data-target="#modal-container">
                 <span class="glyphicon glyphicon-edit"></span> Editar
             </button>
 
-            <button ng-click="vm.getOrder(order.id); vm.delete();"
+            <button id="elim{{order.id}}"
+                    name="elim{{order.id}}"
+                    ng-click="vm.getOrder(order.id); vm.delete();"
                     class="btn btn-danger btn-sm"
                     data-toggle="modal"
-                    data-target="#modal-container"
-                    id="elim{{order.id}}>
+                    data-target="#modal-container">
                 <span class="glyphicon glyphicon-trash"></span> Eliminar
             </button>
         </order-card>
